Istio-Canary-Deployment/code/istio/split/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-primary
  labels:
    app: go-app
    release: primary
spec:
  selector:
    matchLabels:
      app: go-app
      release: primary
  replicas: 3
  template:
    metadata:
      labels:
        app: go-app
        release: primary
    spec:
      containers:
      - name: go-app
        image: kombaraj/go-app:2.0.0
        imagePullPolicy: IfNotPresent

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-canary
  labels:
    app: go-app
    release: canary
spec:
  selector:
    matchLabels:
      app: go-app
      release: canary
  replicas: 0
  template:
    metadata:
      labels:
        app: go-app
        release: canary
    spec:
      containers:
      - name: go-app
        image: kombaraj/go-app:2.0.0
        imagePullPolicy: IfNotPresent
