Istio-Canary-Deployment/code/istio/split/app/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-app
spec:
  hosts:
  - go-app.kombaraj.com
  gateways:
  - go-app
  http:
  - route:
    - destination:
        host: go-app
        subset: canary
        port:
          number: 80
      weight: 0
      headers:
        request:
          set:
            release: canary
    - destination:
        host: go-app
        subset: primary
        port:
          number: 80
      weight: 100
      headers:
        request:
          set:
            release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-app
spec:
  host: go-app
  subsets:
  - name: primary
    labels:
      release: primary
  - name: canary
    labels:
      release: canary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - go-app.kombaraj.com
